# fastapi-docker-example

./: .gitignore  Dockerfile  README.md'  docker-compose.yml  pyproject.toml
app/: database.py  main.py
tests/: test_main.py
