[tool.poetry]
name = "fastapi-docker-example"
version = "0.1.0"
description = ""
authors = ["iooVM <mihail@shirshakov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
asyncpg = "^0.30.0"
pydantic = "^2.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
